select and options created, getting select value function created on main.js

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
         <div class="sm-4col">
         </div>  
         <div class="sm-4col">
-          <select>
+          <select id="yearSelect">
+            <option value="">Año</option>
             <option value="1960">1960</option>
             <option value="1965">1965</option>
             <option value="1970">1970</option>
@@ -62,6 +63,7 @@
     </section>
 
     <script src="./data/injuries/injuries.js"></script>
+    <script src="data.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
