--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shorcut icon"  type="img/png"  href="./imgs/insurance.png">
   </head>
   <body>
     <header class="container">
@@ -23,32 +24,8 @@
         </div>  
         <div class="sm-4col">
           <select id="yearSelect">
-            <option value="">Año</option>
-            <option value="1960">1960</option>
-            <option value="1965">1965</option>
-            <option value="1970">1970</option>
-            <option value="1975">1975</option>
-            <option value="1980">1980</option>
-            <option value="1985">1985</option>
-            <option value="1990">1990</option>
-            <option value="1995">1995</option>
-            <option value="2000">2000</option>
-            <option value="2001">2001</option>
-            <option value="2002">2002</option>
-            <option value="2003">2003</option>
-            <option value="2004">2004</option>
-            <option value="2005">2005</option>
-            <option value="2006">2006</option>
-            <option value="2007">2007</option>
-            <option value="2008">2008</option>
-            <option value="2009">2009</option>
-            <option value="2010">2010</option>
-            <option value="2011">2011</option>
-            <option value="2012">2012</option>
-            <option value="2013">2013</option>
-            <option value="2014">2014</option>
-            <option value="2015">2015</option>
-            <option value="2016">2016</option>
+            <option value="0">Año</option>
+          
           </select>
         </div>
         <div class="sm-4col">
@@ -56,7 +33,7 @@
       </div>
     </section>
 
-    <section class="container">
+    <section class="container" id="container_description">
       <div class="row">
         <div></div>
       </div>
