--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </div>  
         <div class="sm-4col">
           <select id="yearSelect">
-            <option value="0">Año</option>
+            <option value="0">-- selecciona el año --</option>
           
           </select>
         </div>
